--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+}
+.row-start-center, .col-center-start {
+  justify-content: flex-start;
+  align-items: center;
+}
+.row-spacebetween-center, .col-center-spacebetween {
+  justify-content: space-between;
+  align-items: center;
+}
