--- a/src/static/style/learningDatas.scss
+++ b/src/static/style/learningDatas.scss
@@ -1,4 +1,10 @@
 .dataWrapper{
   margin: 0 auto;
-  width: 64rem;
+  width: 62rem;
+}
+.upload{
+  margin-left: 0.8rem;
+}
+.resDelete{
+  color: firebrick;
 }
