--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,22 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.ant-table-content {
+  padding: 10px !important;
+}
+.ant-card-body {
+  padding: 4px !important;
+}
+.ant-tabs-bar {
+  margin: 0 0 12px 0 !important;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
+.hidden {
+  display: none !important;
+}
 .row {
   display: flex;
   flex-direction: row;
@@ -20,6 +30,10 @@ code {
   display: flex;
   flex-direction: column;
 }
+.center-center {
+  justify-content: center;
+  align-items: center;
+}
 .row-start-center, .col-center-start {
   justify-content: flex-start;
   align-items: center;
@@ -27,4 +41,8 @@ code {
 .row-spacebetween-center, .col-center-spacebetween {
   justify-content: space-between;
   align-items: center;
+}
+.rootApp{
+  min-height: calc(100vh + 1px);
+  margin: 0 auto;
 }
