--- a/src/static/style/home.scss
+++ b/src/static/style/home.scss
@@ -1,31 +1,28 @@
-
 .wrap{
   display: flex;
   width: 100%;
   justify-content: center;
 }
 .homeWrap{
-  width: 1024px;
+  width: 64rem;
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
-  padding: 10px 10px;
 }
 .homeLeft{
-  width: 460px;
-  height: 460px;
-  border: 1px solid blue;
-  Card{
-    min-height: 450px;
-    background: green;
-  }
+  width: 30rem;
+  height: 470px;
+  border: 1px solid #E8E8E8;
+  padding: 5px;
 }
 .homeRight{
   width: 530px;
-  height: 460px;
-  div{
+  height: auto;
+}
+@for $i from 1 through 4 {
+  .img-#{$i} {
+    background-image: url("../../static/images/#{$i}.jpg");
+    background-size: 530px 470px;
     width: 530px;
-    height: 460px;
+    height: 470px;
   }
-  border: 1px solid green;
 }
