--- a/src/static/style/search.css
+++ b/src/static/style/search.css
@@ -1,6 +1,7 @@
 .container {
   width: 30rem;
-  height: 2.2rem; }
+  height: 2.2rem;
+  margin-bottom: 8px; }
   .container .search {
     width: 20rem;
     display: flex; }
